ref: button title to sign up;

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -7,6 +7,7 @@
   "message": "You have pushed the button this many times:",
   "nextBtn": "Next",
   "registerText": "Register in the app\nto save your data!",
+  "signUp": "Sign up",
   "skipBtn": "Skip",
   "startBtn": "Getting started",
   "taglineText": "Your AI-enhanced\ntrip advisor",
