--- a/lib/l10n/intl_uz.arb
+++ b/lib/l10n/intl_uz.arb
@@ -7,6 +7,7 @@
   "message": "Siz tugamani shuncha martta bosgansiz:",
   "nextBtn": "Next",
   "registerText": "Register in the app\nto save your data!",
+  "signUp": "Sign up",
   "skipBtn": "Skip",
   "startBtn": "Getting started",
   "taglineText": "Your AI-enhanced\ntrip advisor",
