feat: home page header design;

--- a/lib/l10n/intl_uz.arb
+++ b/lib/l10n/intl_uz.arb
@@ -1,6 +1,7 @@
 {
   "btn": "Ma'lumotlar sahifasini ochish",
   "followTheLocation": "Follow the location",
+  "homeSearchHint": "Where do you want to go?",
   "introText": "Get ready\nfor new journeys\nwith us!",
   "language": "uz",
   "locationPermissionText": "To help you make\nthe right choice,\nwe need to know\nyour location!",
