--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -1,6 +1,7 @@
 {
   "btn": "Open info page",
   "followTheLocation": "Follow the location",
+  "homeSearchHint": "Where do you want to go?",
   "introText": "Get ready\nfor new journeys\nwith us!",
   "language": "en",
   "locationPermissionText": "To help you make\nthe right choice,\nwe need to know\nyour location!",
